js/src/tests/test262/built-ins/Promise/reject/length.js
assert
.
sameValue
(
Promise
.
reject
.
length
1
)
;
verifyNotEnumerable
(
Promise
.
reject
'
length
'
)
;
verifyNotWritable
(
Promise
.
reject
'
length
'
)
;
verifyConfigurable
(
Promise
.
reject
'
length
'
)
;
reportCompare
(
0
0
)
;
